package.json updated

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name":"feed-tables",
   "author": "Tomas Vitvar <tomas@vitvar.com>",
   "version": "0.1.0",
-  "description": "Simple API for accessing Google Spreadsheets data as tables for Node.js and client-side JavaScript",
-  "keywords": ["Goofle Spreadsheets", "server"],
+  "description": "A lightweight parser for Google Spreadsheets tables in cells or list feed JSON data formats.",
+  "keywords": ["Google Spreadsheets", "server", "client", "Atom feed"],
   "directories": {
     "lib": "lib"
   },
